src/styles/main.css
/**
 * Main CSS
 */

:root {
  --black: 1a1a1a;
  --yellow-light: #fffcd5;
  --red: #c1272d;
}

html {
  font-size: 62.5%;
  font-synthesis: none;
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 100%;
}

body {
  color: var(--black);
  background-color: var(--yellow-light);
  font-family: Georgia, 'Times New Roman', Times, serif;
  font-size: 2.4rem;
  font-weight: 400;
  line-height: 1.5;
  text-align: left;
}

img {
  max-inline-size: none;
  max-block-size: none;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 2.4rem;
  padding: 2.4rem;
  text-align: center;
}

main > a img {
  display: block;
  max-width: 100%;
  height: auto;
}

main > a h1 {
  width: 1px !important;
  height: 1px !important;
  padding: 0 !important;
  margin: -1px !important;
  overflow: hidden !important;
  clip: rect(0, 0, 0, 0) !important;
  white-space: nowrap !important;
  border: 0 !important;
}

ul {
  text-align: center;
  display: flex;
  flex-wrap: wrap;
  column-gap: 2.4rem;
  justify-content: center;
}

a {
  text-decoration: underline;
  text-decoration-color: var(--red);
  transition: text-decoration-color .3s;
}

a:hover,
a:focus {
  text-decoration-color: var(--black);
}

